--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,8 @@
 @use './users/homeComp/Header';
 @use './users/homeComp/Activities';
 @use './users/homeComp/Highlight';
-@use './users/homeComp/Exp';
+@use './users/homeComp/Course';
 @use './users/homeComp/CareerP';
+@use './users/homeComp/Exp';
 
 // -----------------------------------------------------------------------------
