--- a/src/sass/users/homeComp/_Activities.scss
+++ b/src/sass/users/homeComp/_Activities.scss
@@ -38,6 +38,8 @@
       }
     }
   }
+  
+  .swiper{ display: none; }
 
 }
 
@@ -53,11 +55,12 @@
   justify-content: center;
   z-index: 1000;
   cursor: pointer;
+  padding: 0 16px;
 }
 
 .overlay-content img {
-  width: 100%;
-  height: 80vh;
+  max-height: 90vh;
+  width: auto;
   // border-radius: 10px;
   // box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
   transition: transform 0.3s ease-in-out;
@@ -71,4 +74,24 @@
 
 .overlay-content img:hover {
   transform: scale(1.05);
+}
+
+@media screen and (max-width: 674px) {
+  .content-box{ display: none !important; }
+  .swiper{ 
+    display: flex !important; 
+    
+    .swiper-slide{
+      img{
+        width: 320px !important;
+        height: 320px !important;
+        object-fit: cover;
+        object-position: top;
+        scale: 1 !important;
+        border-radius: 24px;
+        filter: grayscale(0) !important;
+        transform: none !important;
+      }
+    }
+  }
 }
