--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @use './users/homeComp/Activities';
 @use './users/homeComp/Highlight';
 @use './users/homeComp/Course';
+@use './users/homeComp/Team';
 @use './users/homeComp/CareerP';
 @use './users/homeComp/Exp';
 
