--- a/src/public/main.css
+++ b/src/public/main.css
@@ -414,6 +414,10 @@
 }
 .course-container .content-container svg {
   position: absolute;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  margin-top: -12vw;
 }
 .course-container .content-container .line-wave2 {
   display: none;
@@ -482,7 +486,6 @@
     text-align: center !important;
   }
   .course-container .text-top-container .main_topic {
-    max-width: 460px !important;
     font-size: 5vw !important;
   }
   .course-container .content-container {
@@ -493,10 +496,10 @@
   }
   .course-container .content-container .line-wave2 {
     display: block !important;
-    margin-top: 50px !important;
-    transform: rotate(-20deg) !important;
+    margin-top: 150px !important;
+    transform: rotate(-100deg) !important;
+    transform: scale(1.2) !important;
     width: 100vw !important;
-    transform: scale(1.1);
   }
   .course-container .content-container .content-box-outter .content-box-inner {
     height: auto !important;
@@ -506,6 +509,149 @@
     font-size: 18px !important;
   }
 }
+.team-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  background: #060606;
+  overflow: hidden;
+}
+.team-container .team-box-outer .flip {
+  position: relative;
+}
+.team-container .team-box-outer .flip > .front,
+.team-container .team-box-outer .flip > .back {
+  display: block;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 0.5s;
+  transition-property: transform, opacity;
+}
+.team-container .team-box-outer .flip > .front {
+  transform: rotateY(0deg);
+}
+.team-container .team-box-outer .flip > .front img {
+  width: 23vw;
+  height: 35vw;
+  object-fit: cover;
+  object-position: top;
+}
+.team-container .team-box-outer .flip > .back {
+  position: absolute;
+  opacity: 0;
+  top: 0px;
+  width: 23.8vw;
+  height: 35vw;
+  transform: rotateY(-180deg);
+  color: #060606;
+  background: #F7F7F9;
+  text-align: start;
+  padding: 2vw;
+  overflow: hidden;
+}
+.team-container .team-box-outer .flip > .back .name {
+  font-size: 2vw;
+}
+.team-container .team-box-outer .flip > .back .position {
+  font-size: 1.5vw;
+}
+.team-container .team-box-outer .flip > .back .detail-container {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  text-align: start;
+  width: 100%;
+}
+.team-container .team-box-outer .flip > .back .detail-container ion-icon {
+  font-size: 2vw;
+  margin-right: 16px;
+}
+.team-container .team-box-outer .flip > .back .detail-container .detail {
+  font-size: 1.2vw;
+}
+.team-container .team-box-outer .flip > .back .detail-container.location ion-icon {
+  font-size: 32px;
+}
+.team-container .team-box-outer .flip > .back .detail-container.img {
+  width: 8vw;
+  height: 8vw;
+}
+.team-container .team-box-outer .flip > .back .detail-container.img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+  filter: grayscale(100);
+}
+.team-container .team-box-outer .flip:hover > .front {
+  transform: rotateY(180deg);
+}
+.team-container .team-box-outer .flip:hover > .back {
+  opacity: 1;
+  transform: rotateY(0deg);
+}
+.team-container .team-box-outer .text-container {
+  margin-top: 16px;
+}
+.team-container .team-box-outer .text-container .name,
+.team-container .team-box-outer .text-container .position {
+  color: #F7F7F9;
+  text-align: end;
+}
+.team-container .team-box-outer .text-container .name {
+  font-size: 2vw;
+}
+.team-container .team-box-outer .text-container .position {
+  font-size: 1.5vw;
+}
+
+@media screen and (max-width: 1280px) {
+  .detail-container.img {
+    display: none !important;
+  }
+}
+@media screen and (max-width: 767px) {
+  .team-container {
+    height: 280vh !important;
+    padding: 200px 0;
+  }
+  .team-container .team-box-outer {
+    width: 320px !important;
+    height: 100% !important;
+  }
+  .team-container .team-box-outer .flip .front img {
+    width: 100%;
+    height: 100%;
+  }
+  .team-container .team-box-outer .flip .back {
+    width: 299px !important;
+    height: 450px !important;
+    padding: 24px !important;
+  }
+  .team-container .team-box-outer .flip .back .name {
+    font-size: 32px !important;
+  }
+  .team-container .team-box-outer .flip .back .position {
+    font-size: 22px !important;
+  }
+  .team-container .team-box-outer .flip .back .detail-container ion-icon {
+    font-size: 20px !important;
+  }
+  .team-container .team-box-outer .flip .back .detail-container .detail {
+    font-size: 16px !important;
+  }
+  .team-container .team-box-outer .flip .back .detail-container.location ion-icon {
+    font-size: 30px !important;
+  }
+  .team-container .text-container .name {
+    font-size: 32px !important;
+  }
+  .team-container .text-container .position {
+    font-size: 20px !important;
+  }
+}
 .careerP-container {
   display: flex;
   justify-content: center;
@@ -513,7 +659,14 @@
   text-align: center;
   padding: 3vw;
   background: #060606;
-  flex-wrap: wrap;
+  flex-direction: column;
+}
+.careerP-container .text-container {
+  color: #F7F7F9;
+  width: 350px;
+}
+.careerP-container .text-container .desc {
+  color: #D2D2D2;
 }
 .careerP-container .card-spotlight {
   cursor: pointer;
@@ -524,7 +677,6 @@
   padding: 2rem;
   overflow: hidden;
   margin: 16px;
-  width: 360px;
   color: #F7F7F9;
   text-align: start;
   --mouse-x: 50%;
