--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,6 @@
 @use './users/homeComp/Course';
 @use './users/homeComp/Team';
 @use './users/homeComp/CareerP';
-@use './users/homeComp/Exp';
+@use './users/homeComp/Faqs';
 
 // -----------------------------------------------------------------------------
