--- a/src/sass/var.scss
+++ b/src/sass/var.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sofia+Sans+Semi+Condensed:ital,wght@0,1..1000;1,1..1000&display=swap');
 
 $blue: #0043C0;
+$purple: #521CAE;
 $black: #060606;
 $grey: #2C2C2C;
 $white: #F7F7F9; 
