--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,4 +14,6 @@
 @use './users/homeComp/CareerP';
 @use './users/homeComp/Faqs';
 
+// ... pages
+@use './users/pages/Contact';
 // -----------------------------------------------------------------------------
