--- a/src/sass/users/homeComp/_Header.scss
+++ b/src/sass/users/homeComp/_Header.scss
@@ -3,10 +3,26 @@
 .header-container{
     @include var.center-content;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background: var.$black;
     overflow: hidden;
 
+    .header-content{
+        // background: red;
+        z-index: 1;
+        margin-top: -150px;
+
+        .text-container{
+            color: var.$white;
+            
+            .titleTH{ font-size: 2vw; }
+            .titleEN{ 
+                font-size: 9vw; 
+                font-weight: 700;
+                line-height: 7vw;
+            }
+        }
+    }
     #lights {
         width: 100%;
         height: 90vh;
