update [user] contact

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 // users
 // ... components
 @use './users/components/Nav';
+@use './users/components/PagesHeader';
 
 // ...  home-pages
 @use './users/homeComp/Header';
