--- a/src/public/main.css
+++ b/src/public/main.css
@@ -78,7 +78,7 @@
   display: none;
 }
 
-@media screen and (max-width: 675px) {
+@media screen and (max-width: 770px) {
   .for-desktop-size {
     display: none !important;
   }
@@ -159,6 +159,36 @@
   .for-mobile-size .navbar .linkList .btn-container .btn-SignIn:nth-child(2):hover:hover,
   .for-mobile-size .navbar .linkList .btn-container .btn-SignUp:nth-child(3):hover {
     box-shadow: 0 0 8px #0043C0;
+  }
+}
+.p-header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  width: 100%;
+  height: 25vh;
+  color: #F7F7F9;
+  background: #060606;
+}
+.p-header-container .main-title {
+  font-size: 64px;
+  margin: 0;
+}
+.p-header-container .sub-title {
+  font-size: 20px;
+}
+.p-header-container .sub-title span {
+  color: #0043C0;
+}
+
+@media screen and (max-width: 550px) {
+  .p-header-container .main-title {
+    font-size: 40px !important;
+  }
+  .p-header-container .sub-title {
+    font-size: 14px !important;
   }
 }
 .header-container {
@@ -809,85 +839,118 @@
 }
 
 .contact-container {
-  background: #060606;
   width: 100%;
   height: 100vh;
+  background: #F7F7F9;
 }
 .contact-container .content-container {
-  display: flex;
-  justify-content: flex-end;
-  padding: 0 3vw;
-  width: 100%;
-  height: auto;
-  background-image: url("/public/users/pages/map.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #F7F7F9;
   position: relative;
-  z-index: 10;
+  padding: 3vw 8vw;
+  overflow: hidden;
 }
-.contact-container .content-container .content-box {
+.contact-container .content-container .contact-deatils {
+  padding-right: 6vw;
+}
+.contact-container .content-container .contact-deatils .desc {
+  font-size: 12px;
+  color: #2C2C2C;
+}
+.contact-container .content-container .contact-deatils .contact-box-container .contact-box {
+  display: flex;
+  margin: 8px;
+  padding: 5px 8px;
+  background: none;
+  align-items: center;
+  border: 1px solid #D2D2D2;
+  border-radius: 8px;
+}
+.contact-container .content-container .contact-deatils .contact-box-container .contact-box ion-icon {
+  font-size: 16px;
+  padding: 12px;
+  color: #F7F7F9;
   background: #060606;
-  text-align: center;
-  width: 450px;
-  height: 490px;
-  padding: 2vw;
-  border-radius: 0 0 16px 16px;
-  box-shadow: 0 12px 0 #0043C0;
+  border-radius: 3px;
+  margin-right: 16px;
 }
-.contact-container .content-container .content-box .text-container {
+.contact-container .content-container .contact-deatils .contact-box-container .contact-box .text-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center !important;
+  justify-content: center;
+  text-align: start;
 }
-.contact-container .content-container .content-box .text-container .main_title {
-  font-size: 40px;
+.contact-container .content-container .contact-deatils .contact-box-container .contact-box .text-container .title-box,
+.contact-container .content-container .contact-deatils .contact-box-container .contact-box .text-container .desc-box {
+  margin: 0;
 }
-.contact-container .content-container .content-box .text-container .sub_title {
-  font-size: 20px;
-}
-.contact-container .content-container .content-box .text-container span {
-  color: #0043C0;
-}
-.contact-container .content-container .content-box .text-container hr {
-  width: 90%;
-  margin-bottom: 32px;
-}
-.contact-container .content-container .content-box .input-box input,
-.contact-container .content-container .content-box .input-box textarea {
-  background: none;
-}
-.contact-container .content-container .content-box .input-box input::placeholder,
-.contact-container .content-container .content-box .input-box textarea::placeholder {
-  color: #D2D2D2;
-}
-.contact-container .content-container .content-box button {
+.contact-container .content-container .contact-deatils .contact-box-container .contact-box .text-container .title-box {
+  font-size: 1.2vw;
   width: 100%;
-  color: #F7F7F9;
-  background: #0043C0;
-  border: 1px solid #0043C0;
-  border-radius: 8px;
+}
+.contact-container .content-container .contact-deatils .contact-box-container .contact-box .text-container .desc-box {
+  font-size: 0.9vw;
+}
+.contact-container .content-container .contact-deatils .contact-box-container .address ion-icon {
+  font-size: 22px;
+  padding: 8px 12px;
+}
+.contact-container .content-container .vl {
+  position: absolute;
+  border-left: 1px solid #060606;
+  height: 500px;
+  left: 47%;
+}
+.contact-container .content-container .get-in-touch hr {
+  width: 30%;
+}
+.contact-container .content-container .get-in-touch .input-box,
+.contact-container .content-container .get-in-touch .send-mess-btn {
+  position: relative;
+  width: 80%;
+}
+.contact-container .content-container .get-in-touch .input-box input:focus,
+.contact-container .content-container .get-in-touch .input-box textarea:focus,
+.contact-container .content-container .get-in-touch .send-mess-btn input:focus,
+.contact-container .content-container .get-in-touch .send-mess-btn textarea:focus {
+  box-shadow: none;
+}
+.contact-container .content-container .get-in-touch .send-mess-btn {
+  cursor: pointer;
   padding: 8px 0;
-  margin-top: 24px;
+  color: #F7F7F9;
+  background: #060606;
+  border: 1px solid #060606;
+  border-radius: 8px;
   transition: all 0.3s ease-out;
 }
-.contact-container .content-container .content-box button:hover {
-  color: #0043C0;
-  background: none;
+.contact-container .content-container .get-in-touch .send-mess-btn:hover {
+  color: #060606;
+  background-color: transparent;
+}
+.contact-container .content-container .get-in-touch .send-mess-btn:disabled {
+  background: #D2D2D2;
+  border: 1px solid #D2D2D2;
+}
+.contact-container .content-container .get-in-touch .send-mess-btn:disabled:hover {
+  color: #F7F7F9;
 }
 
-@media screen and (max-width: 770px) {
-  .contact-container .content-container {
-    justify-content: center !important;
-    height: 500px !important;
+@media screen and (max-width: 990px) {
+  .contact-container .content-container .contact-deatils .contact-box-container .contact-box {
+    width: 250px !important;
   }
-  .contact-container .content-container .content-box {
-    display: block !important;
-    visibility: visible !important;
-    width: 320px !important;
-    height: 490px !important;
-    padding: 32px !important;
+  .contact-container .content-container .contact-deatils .contact-box-container .contact-box .text-container .title-box {
+    font-size: 14px !important;
+  }
+  .contact-container .content-container .contact-deatils .contact-box-container .contact-box .text-container .desc-box {
+    font-size: 12px !important;
+  }
+  .contact-container .content-container .vl {
+    display: none !important;
+  }
+  .contact-container .content-container .get-in-touch .input-box,
+  .contact-container .content-container .get-in-touch .send-mess-btn {
+    width: 100% !important;
   }
 }
 
